--- a/resources/angular/src/app/pages/master/transaction/components/transaction-form/transaction-form.component.html
+++ b/resources/angular/src/app/pages/master/transaction/components/transaction-form/transaction-form.component.html
@@ -75,7 +75,7 @@
         <div class="col-md-12">
             <div class="form-group row">
                 <div class="col-md-12 text-right">
-                    <button type="button" class="btn btn-outline-secondary mr-2" (click)="back()">Daftar Item</button>
+                    <button type="button" class="btn btn-outline-secondary mr-2" (click)="back()">Back</button>
                     <button type="button" class="btn btn-primary" (click)="save()">Simpan</button>
                 </div>
             </div>
