--- a/resources/angular/src/app/pages/master/books/components/book-list/book-list.component.html
+++ b/resources/angular/src/app/pages/master/books/components/book-list/book-list.component.html
@@ -4,19 +4,16 @@
             <div class="card">
                 <div class="card-header d-flex justify-content-between">
                     <h1>
-                        Daftar Items
+                        Book List
                     </h1>
                     <div role="group" class="btn-group btn-group-sm btn-group-justified blocks">
-                        <button  type="button" class="btn btn-sm btn-outline-secondary mr-2">
-                            <i class="fa fa-search font-size-14 align-middle mr-1"></i> Pencarian
-                        </button>
                         <button type="button" class="btn btn-sm btn-primary mr-2" (click)="createBook()">
                             <i class="fa fa-plus font-size-14 align-middle mr-1"></i> Tambah Items
                         </button>
                     </div>
                 </div>
                 <div class="card-body">
-                    <table class="table table-hover">
+                    <table datatable class="table table-hover" data-page-length="2" [dtOptions]="dtOptions">
                         <thead class="thead-light">
                             <tr>
                                 <td>Title</td>
@@ -28,7 +25,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let val of listBooks; index as i; trackBy:trackByIndex">
+                            <tr *ngFor="let val of listBooks; index as i;">
                                 <td class="vertical-middle">{{val.title}}</td>
                                 <td class="vertical-middle">{{val.author}}</td>
                                 <td class="vertical-middle">{{val.publisher}}</td>
